--- a/templates/entry.html
+++ b/templates/entry.html
@@ -11,7 +11,7 @@
         <tr><td>Letters: </td><td><input name='letters' type='TEXT' value='aeouiy'></td></tr>
     </table>
     <p>Press this button when You're redy:</p>
-    <p> <input value='Do it!' type='submit'>ad</p>
+    <p> <input value='Do it!' type='submit'></p>
 
 </form>
 
